# FakerGPT

./: README.md  justfile  pyproject.toml
fakergpt/: articles.py  people.py
