[tool.poetry]
name = "fakergpt"
version = "0.1.0"
description = "A library for generating fake test data with LLMs"
authors = ["Joshua Oliphant <joshua.oliphant@hey.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
